--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -10,7 +10,7 @@
 
     <div style=" display: flex;">
         <div style="flex: 1;padding: 1em;border: solid; height: 230px;">  
-            <h4> <a href="../modifica_dati/modifica.html"> visualizza grafico totale </a></h4>
+             <a routerLink="/grafico/totale" routerLinkActive="active"> <h4> visualizza grafico totale(beta)</h4> </a>
         </div>
         <div style="flex: 1;padding: 1em;border: solid;height: 230px;">
             <a routerLink="/insc" routerLinkActive="active"><h4> inserisci nuova commessa</h4></a>
@@ -31,8 +31,11 @@
       <div style="flex: 2;padding: 1em;border: solid; height: 230px;">  
         <h4><a routerLink="/inspr" routerLinkActive="active">inserisci ruolo risorsa </a></h4>
     </div>
+    <div style="flex: 2;padding: 1em;border: solid; height: 230px;">  
+        <h4><a routerLink="/inserisci/rendicontazione" routerLinkActive="active">gestione rendicontazione(beta) </a></h4>
+    </div>
     <div style="flex: 2;padding: 1em;border: solid;height: 230px;">
-        <a routerLink="/inspra" routerLinkActive="active"><h4> inserisci practice</h4></a>
+        <a routerLink="/practice" routerLinkActive="active"><h4> inserisci practice</h4></a>
     </div>
     <div style="flex: 2;padding: 1em;border: solid;height: 230px;">
         <a routerLink="/inspd" routerLinkActive="active"><h4>inserisci responsabile practice</h4></a>
