--- a/client/src/app/inserisci-nuova-commessa/inserisci-nuova-commessa.component.html
+++ b/client/src/app/inserisci-nuova-commessa/inserisci-nuova-commessa.component.html
@@ -3,33 +3,37 @@
     <div style="flex: 1;padding: 1em;border: solid;">
      <form [formGroup] = "form">
       <mat-form-field>
-            <mat-label>codice</mat-label>
-            <input matInput formControlName="codice" placeholder="codice">
+            <mat-label>Codice</mat-label>
+            <input matInput formControlName="codice" placeholder="Codice">
            
       </mat-form-field> 
        
        <mat-form-field>
-        <mat-label>descrizione</mat-label>
-        <input matInput formControlName="descrizione" placeholder="descrizione">
+        <mat-label>Descrizione</mat-label>
+        <input matInput formControlName="descrizione" placeholder="Descrizione">
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Budget</mat-label>
+          <input matInput formControlName="budget" placeholder="Budget">
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>Budget Pregresso</mat-label>
+        <input matInput formControlName="budgetPreg" placeholder="Budget Pregresso">
+    </mat-form-field>
+        <mat-form-field>
+            <mat-label>Effort Totale</mat-label>
+            <input matInput formControlName="effortTot" placeholder="Effort Totale">
         </mat-form-field>
 
         <mat-form-field>
-            <mat-label>effort totale</mat-label>
-            <input matInput formControlName="effortTot" placeholder="effort totale">
-        </mat-form-field>
-
-        <mat-form-field>
-            <mat-label>effort pregresso</mat-label>
-            <input matInput formControlName="effortPreg" placeholder="effort pregresso">
+            <mat-label>Effort Pregresso</mat-label>
+            <input matInput formControlName="effortPreg" placeholder="Effort Pregresso">
         </mat-form-field>
         <mat-form-field>
-            <mat-label>note </mat-label>
-            <input matInput formControlName="note" placeholder="note">
+            <mat-label>Note </mat-label>
+            <input matInput formControlName="note" placeholder="Note">
         </mat-form-field>
-        <mat-form-field>
-            <mat-label>budget</mat-label>
-            <input matInput formControlName="budget" placeholder="budget">
-        </mat-form-field>
+        
        
      
     
@@ -44,8 +48,8 @@
         <form [formGroup] = "form2">
      
             <mat-form-field>
-              <mat-label>stato</mat-label>
-              <mat-select formControlName="stato" placeholder="stato">
+              <mat-label>Stato</mat-label>
+              <mat-select formControlName="stato" placeholder="Stato">
                 <mat-option></mat-option>
                 <mat-option *ngFor="let stato of stati" [value]="stato">{{stato.descrizione2}}</mat-option>
       
@@ -55,8 +59,8 @@
             </mat-form-field><br>
             
             <mat-form-field>
-             <mat-label>tipologia</mat-label>
-             <mat-select formControlName="tipologia" placeholder="tipologia">
+             <mat-label>Tipologia</mat-label>
+             <mat-select formControlName="tipologia" placeholder="Tipologia">
              <mat-option></mat-option>
                 <mat-option *ngFor="let tipologia of tipologie" [value]="tipologia">{{tipologia.descrizione2}}</mat-option>
               </mat-select>
