--- a/client/src/app/inserisci-livello/inserisci-livello.component.html
+++ b/client/src/app/inserisci-livello/inserisci-livello.component.html
@@ -3,8 +3,8 @@
     <div style="flex: 1;padding: 1em;border: solid;">
      <form [formGroup] = "form">
         <mat-form-field>
-        <mat-label>livello</mat-label>
-        <mat-select formControlName="livello" placeholder="livello">
+        <mat-label>Livello</mat-label>
+        <mat-select formControlName="livello" placeholder="Livello">
           <mat-option></mat-option>
           <mat-option *ngFor="let livello of livelli" [value]="livello">{{livello.descrizione2}}</mat-option>
 
@@ -12,8 +12,8 @@
         </mat-select>
         </mat-form-field><br>
         <mat-form-field>
-            <mat-label>risorsa</mat-label>
-            <mat-select formControlName="risorsa" placeholder="risorsa">
+            <mat-label>Risorsa</mat-label>
+            <mat-select formControlName="risorsa" placeholder="Risorsa">
               <mat-option></mat-option>
               <mat-option *ngFor="let risorsa of risorse" [value]="risorsa">{{risorsa.descrizione2}}</mat-option>
     
