--- a/client/src/app/practice-responsabile/practice-responsabile.component.html
+++ b/client/src/app/practice-responsabile/practice-responsabile.component.html
@@ -3,7 +3,7 @@
     <div style="flex: 1;padding: 1em;border: solid;">
      <form [formGroup] = "form">
         <mat-form-field>
-        <mat-label>practice</mat-label>
+        <mat-label>Practice</mat-label>
         <mat-select formControlName="practice" placeholder="practice">
           <mat-option></mat-option>
           <mat-option *ngFor="let practice of practices" [value]="practice">{{practice.descrizione2}}</mat-option>
@@ -12,7 +12,7 @@
         </mat-select>
         </mat-form-field><br>
         <mat-form-field>
-            <mat-label>risorsa</mat-label>
+            <mat-label>Risorsa</mat-label>
             <mat-select formControlName="risorsa" placeholder="risorsa">
               <mat-option></mat-option>
               <mat-option *ngFor="let risorsa of risorse" [value]="risorsa">{{risorsa.descrizione2}}</mat-option>
