--- a/client/src/app/practice-risorsa/practice-risorsa.component.html
+++ b/client/src/app/practice-risorsa/practice-risorsa.component.html
@@ -3,8 +3,8 @@
     <div style="flex: 1;padding: 1em;border: solid;">
      <form [formGroup] = "form">
         <mat-form-field>
-        <mat-label>practice</mat-label>
-        <mat-select formControlName="practice" placeholder="practice">
+        <mat-label>Practice</mat-label>
+        <mat-select formControlName="practice" placeholder="Practice">
           <mat-option></mat-option>
           <mat-option *ngFor="let practice of practices" [value]="practice">{{practice.descrizione2}}</mat-option>
 
@@ -12,8 +12,8 @@
         </mat-select>
         </mat-form-field><br>
         <mat-form-field>
-            <mat-label>risorsa</mat-label>
-            <mat-select formControlName="risorsa" placeholder="risorsa">
+            <mat-label>Risorsa</mat-label>
+            <mat-select formControlName="risorsa" placeholder="Risorsa">
               <mat-option></mat-option>
               <mat-option *ngFor="let risorsa of risorse" [value]="risorsa">{{risorsa.descrizione2}}</mat-option>
     
