nuova versione db gestione odl

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -10,17 +10,17 @@
 
     <div style=" display: flex;">
         <div style="flex: 1;padding: 1em;border: solid; height: 230px;">  
-             <a routerLink="/grafico/totale" routerLinkActive="active"> <h4> visualizza grafico totale(beta)</h4> </a>
+             <a routerLink="/grafico/totale" routerLinkActive="active"> <h4> Prospetto Generale</h4> </a>
         </div>
         <div style="flex: 1;padding: 1em;border: solid;height: 230px;">
-            <a routerLink="/insc" routerLinkActive="active"><h4> inserisci nuova commessa</h4></a>
+            <a routerLink="/insc" routerLinkActive="active"><h4> Anagrafica Commessa</h4></a>
         </div>
         <div style="flex: 1;padding: 1em;border: solid;height: 230px;">
-            <a routerLink="/inscr" routerLinkActive="active"><h4>inserisci giornate risorsa</h4></a>
+            <a routerLink="/inscr" routerLinkActive="active"><h4>Attribuzione Risorsa a Commessa</h4></a>
        </div>
 
         <div style="flex: 1;padding: 1em;border: solid;height: 230px;">
-            <a routerLink="/insp" routerLinkActive="active"><h4>inserisci nuova risorsa</h4></a>
+            <a routerLink="/insp" routerLinkActive="active"><h4>Anagrafica Risorsa</h4></a>
          </div>
 
          <div style="flex: 1;padding: 1em;border: solid;height: 230px;">
@@ -28,9 +28,7 @@
          </div>
         </div>
  <div style=" display: flex;">   
-      <div style="flex: 2;padding: 1em;border: solid; height: 230px;">  
-        <h4><a routerLink="/inspr" routerLinkActive="active">inserisci ruolo risorsa </a></h4>
-    </div>
+     
     <div style="flex: 2;padding: 1em;border: solid; height: 230px;">  
         <h4><a routerLink="/inserisci/rendicontazione" routerLinkActive="active">gestione rendicontazione(beta) </a></h4>
     </div>
@@ -40,10 +38,14 @@
     <div style="flex: 2;padding: 1em;border: solid;height: 230px;">
         <a routerLink="/inspd" routerLinkActive="active"><h4>inserisci responsabile practice</h4></a>
    </div>
+   <div style="flex: 2;padding: 1em;border: solid;height: 230px;">
+    <a routerLink="/inserisci/cliente" routerLinkActive="active"><h4>inserisci cliente</h4></a>
+</div>
+<div style="flex: 2;padding: 1em;border: solid;height: 230px;">
+    <a routerLink="/inserisci/odl" routerLinkActive="active"><h4>inserisci odl</h4></a>
+</div>
 
-    <div style="flex: 2;padding: 1em;border: solid;height: 230px;">
-        <a routerLink="/insprar" routerLinkActive="active"><h4>inserisci risorsa a practice</h4></a>
-     </div>
+    
 
     
     
