--- a/client/src/app/inserisci-commessa-risorsa/inserisci-commessa-risorsa.component.html
+++ b/client/src/app/inserisci-commessa-risorsa/inserisci-commessa-risorsa.component.html
@@ -18,6 +18,13 @@
           <mat-option *ngFor="let risorsa of risorse" [value]="risorsa">{{risorsa.descrizione2}}</mat-option>
         </mat-select>
       </mat-form-field><br>
+      <mat-form-field>
+        <mat-label>Odl</mat-label>
+        <mat-select formControlName="odl" placeholder="Odl">
+          <mat-option></mat-option>
+          <mat-option *ngFor="let odl of odls" [value]="odl">{{odl.descrizione2}}</mat-option>
+        </mat-select>
+      </mat-form-field><br>
 
      <button mat-raised-button color="primary" [disabled]= "!disabilitato" (click)="inserisciRiga()">inserisci dati</button>
     </form>
@@ -34,12 +41,13 @@
                 </mat-select>
               </mat-form-field><br>
               <mat-form-field>
-                <mat-label>mese</mat-label>
-                <mat-select formControlName="Mese" placeholder="Mese">
+                <mat-label>Mese</mat-label>
+                <mat-select formControlName="mese" placeholder="Mese">
                   <mat-option></mat-option>
                   <mat-option *ngFor="let mese of mesi" [value]="mese">{{mese}}</mat-option>
                 </mat-select>
               </mat-form-field><br>
+              
               <mat-form-field>
                 <mat-label>Giornate</mat-label>
                 <input matInput formControlName="giornate" placeholder="Giornate">
