--- a/client/src/app/ins-cliente/ins-cliente.component.html
+++ b/client/src/app/ins-cliente/ins-cliente.component.html
@@ -3,7 +3,7 @@
     <div style="flex: 1;padding: 1em;border: solid;">
      <form [formGroup] = "form">
         <mat-form-field>
-            <mat-label>Codice</mat-label>
+            <mat-label>Cliente</mat-label>
             <input matInput formControlName="codice" placeholder="Practice">
         </mat-form-field><br>
         <mat-form-field>
