modifica grafica a nuova-practice e practice-responsabile

--- a/client/src/app/nuova-practice/nuova-practice.component.html
+++ b/client/src/app/nuova-practice/nuova-practice.component.html
@@ -1,42 +1,31 @@
+<button mat-button (click)="showForm=!showForm">
+  <span *ngIf="showForm">Nascondi form</span>
+  <span *ngIf="!showForm">Mostra form</span>
+</button>
 
-<div style=" display: flex; height: 340px;">
-    <div style="flex: 1;padding: 1em;border: solid;">
-     <form [formGroup] = "form">
-        <mat-form-field>
-            <mat-label>parctice</mat-label>
-            <input matInput formControlName="practice" placeholder="practice">
-        </mat-form-field><br>
-         
-           
-       
-       
-     
-    
-     <button mat-raised-button color="primary" (click)="inserisciRiga()">inserisci dati</button>
-  
-            
-     </form>
-  
-    
-    </div>
-   
-   
-    
-    
-    
+<div style="display: flex; margin-bottom: 12px;" *ngIf="showForm">
+  <div style="flex: 1;padding: 1em;border: solid;">
+    <form [formGroup]="form">
+      <mat-form-field appearance="outline">
+        <mat-label>Descrizione</mat-label>
+        <input matInput formControlName="practice" placeholder="" />
+      </mat-form-field><br>
+      <button mat-raised-button color="primary" (click)="inserisciRiga()">Inserisci dati</button>
+    </form>
   </div>
+</div>
   
-  <ag-grid-angular
-     style="width: 100%; height: 100%"
-     class="ag-theme-alpine"
-     [getRowId]="getRowId"
-     [columnDefs]="columnDefs"
-     [defaultColDef]="defaultColDef"
-     [rowData]="rowData$ | async"
-     [rowSelection]="'multiple'"
-     (gridReady)="onGridReady($event)"
-     (cellClicked)="onCellClicked($event)"
-     (cellEditingStarted)="onCellEditingStarted($event)"
-     (cellValueChanged)="onCellValueChanged($event)"
-   ></ag-grid-angular>
+<ag-grid-angular
+  class="ag-theme-alpine"
+  [getRowId]="getRowId"
+  [columnDefs]="columnDefs"
+  [defaultColDef]="defaultColDef"
+  [rowData]="rowData$ | async"
+  [rowSelection]="'multiple'"
+  (gridReady)="onGridReady($event)"
+  (cellClicked)="onCellClicked($event)"
+  (cellEditingStarted)="onCellEditingStarted($event)"
+  (cellValueChanged)="onCellValueChanged($event)"
+  domLayout='autoHeight'
+></ag-grid-angular>
   
