--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -7,17 +7,24 @@ html,
 body {
     height: 100%;
     width: 100%;
-    padding: 5px;
     box-sizing: border-box;
     -webkit-overflow-scrolling: touch;
-}
-
-html,
-body {
-    height: 100%;
+    padding: 0px;
+    margin: 0px;
 }
 
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.button-cell {
+    padding: 0px;
+    width: 34px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.button-cell button:active {
+    border-color: transparent!important;
 }
