--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div style=" display: flex;">
-  <div style="flex: 1;padding: 1em;">
-<header >
+<!-- <div style=" display: flex;"> -->
+  <!-- <div style="flex: 1;padding: 1em;"> -->
+<!-- <header > -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -97,12 +97,14 @@
     </div>
   </nav>
    Navbar -->
-</header>
+<!-- </header>
 </div>
-</div>
-<div style=" display: flex;">   
-  <div style="flex: 2;padding: 1em;">
+</div> -->
+<!-- <div style=" display: flex;">    -->
+  <!-- <div style="flex: 2;padding: 1em;"> -->
+    <div class="p-2">
       <router-outlet ></router-outlet>
-  </div>
+    </div>
+  <!-- </div> -->
   
-</div> 
+<!-- </div>  -->
