modifica grafica a inserisci-risorsa

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -15,7 +15,7 @@
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownPractice">
                           <li class="nav-item"><a class="nav-link" href="#" routerLink="/practice" >Practice</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/inspd"  >Responsabili practice</a></li>
+                          <!-- <li class="nav-item"><a class="nav-link" href="#" routerLink="/inspd"  >Responsabili practice</a></li> -->
                       </ul>
                   </li>
                   <li class="nav-item dropdown">
