--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -23,10 +23,10 @@
                           Risorse
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownRisorse">
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/insp"   >Risorse</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/inspl"  >Livelli risorsa</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/inspr"  >Ruoli risorsa</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/insprar">Risorse-Practice</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/risorse"  >Risorse</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/livelli"  >Livelli risorsa</a></li>
+                          <!-- <li class="nav-item"><a class="nav-link" href="#" routerLink="/inspr"  >Ruoli risorsa</a></li> -->
+                          <!-- <li class="nav-item"><a class="nav-link" href="#" routerLink="/insprar">Risorse-Practice</a></li> -->
                       </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -34,8 +34,10 @@
                           Commesse
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownCommesse">
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/insc"   >Commesse</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/inscr"  >Giornate</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/commesse"  >Commesse</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/giornate"  >Giornate</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/clienti"   >Clienti</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/odl"       >OdL</a></li>
                       </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -43,7 +45,8 @@
                           Report
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownReport">
-                          <li class="nav-item"><a class="nav-link disabled" href="#">Visualizza grafico totale</a></li>
+                          <li class="nav-item"><a class="nav-link" routerLink="/prospetto-generale">Prospetto generale</a></li>
+                          <li class="nav-item"><a class="nav-link" routerLink="/rendicontazione">Rendicontazione</a></li>
                       </ul>
                   </li>
               </ul>
