--- a/client/src/app/inserisci-ruolo/inserisci-ruolo.component.html
+++ b/client/src/app/inserisci-ruolo/inserisci-ruolo.component.html
@@ -1,5 +1,9 @@
 
-<div style=" display: flex; height: 340px;">
+<button mat-button (click)="showForm=!showForm">
+  <span *ngIf="showForm">Nascondi form</span>
+  <span *ngIf="!showForm">Mostra form</span>
+</button>
+<div style="display: flex; margin-bottom: 12px;" *ngIf="showForm">
     <div style="flex: 1;padding: 1em;border: solid;">
      <form [formGroup] = "form">
         <mat-form-field>
@@ -53,7 +57,6 @@
   </div>
   
   <ag-grid-angular
-     style="width: 100%; height: 100%"
      class="ag-theme-alpine"
      [getRowId]="getRowId"
      [columnDefs]="columnDefs"
@@ -64,5 +67,6 @@
      (cellClicked)="onCellClicked($event)"
      (cellEditingStarted)="onCellEditingStarted($event)"
      (cellValueChanged)="onCellValueChanged($event)"
+     domLayout='autoHeight'
    ></ag-grid-angular>
   
