Riorganizzati component e routing

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -11,10 +11,13 @@
                   <li class="nav-item"><a class="nav-link" href="#" routerLink="/" aria-current="page" routerLinkActive="active">Home</a></li>
                   <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" id="navbarDropdownPractice" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Practice
+                          Anagrafiche
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownPractice">
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/practice" >Practice</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/practice">Practice</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/clienti" >Clienti</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/commesse">Commesse</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/odl"     >OdL</a></li>
                           <!-- <li class="nav-item"><a class="nav-link" href="#" routerLink="/inspd"  >Responsabili practice</a></li> -->
                       </ul>
                   </li>
@@ -23,21 +26,18 @@
                           Risorse
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownRisorse">
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/risorse"  >Risorse</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/livelli"  >Livelli risorsa</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/risorse">Risorse</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/livelli">Livelli risorse</a></li>
                           <!-- <li class="nav-item"><a class="nav-link" href="#" routerLink="/inspr"  >Ruoli risorsa</a></li> -->
                           <!-- <li class="nav-item"><a class="nav-link" href="#" routerLink="/insprar">Risorse-Practice</a></li> -->
                       </ul>
                   </li>
                   <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" id="navbarDropdownCommesse" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Commesse
+                          Progetti
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownCommesse">
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/commesse"  >Commesse</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/giornate"  >Giornate</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/clienti"   >Clienti</a></li>
-                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/odl"       >OdL</a></li>
+                          <li class="nav-item"><a class="nav-link" href="#" routerLink="/giornate">Giornate</a></li>
                       </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -46,7 +46,7 @@
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdownReport">
                           <li class="nav-item"><a class="nav-link" routerLink="/prospetto-generale">Prospetto generale</a></li>
-                          <li class="nav-item"><a class="nav-link" routerLink="/rendicontazione">Rendicontazione</a></li>
+                          <li class="nav-item"><a class="nav-link" routerLink="/rendicontazione"   >Rendicontazione</a></li>
                       </ul>
                   </li>
               </ul>
