--- a/client/src/app/clienti/clienti.component.html
+++ b/client/src/app/clienti/clienti.component.html
@@ -1,51 +1,41 @@
-
-<div style=" display: flex; height: 340px;">
+<button mat-button (click)="showForm=!showForm">
+    <span *ngIf="showForm">Nascondi form</span>
+    <span *ngIf="!showForm">Mostra form</span>
+</button>
+<div style="display: flex; margin-bottom: 12px;" *ngIf="showForm">
     <div style="flex: 1;padding: 1em;border: solid;">
-     <form [formGroup] = "form">
-        <mat-form-field>
-            <mat-label>Cliente</mat-label>
-            <input matInput formControlName="codice" placeholder="Practice">
-        </mat-form-field><br>
-        <mat-form-field>
-            <mat-label>Descrizione</mat-label>
-            <input matInput formControlName="descrizione" placeholder="Descrizione">
-        </mat-form-field><br>
-        <mat-form-field>
-            <mat-label>Note</mat-label>
-            <input matInput formControlName="note" placeholder="Note">
-        </mat-form-field><br>
-         
-         
-           
-       
-       
-     
-    
-     <button mat-raised-button color="primary" (click)="inserisciRiga()">inserisci dati</button>
-  
-            
-     </form>
-  
-    
+        <form [formGroup] = "form">
+            <mat-form-field>
+                <mat-label>Cliente</mat-label>
+                <input matInput formControlName="codice" placeholder="Practice">
+            </mat-form-field>
+            <br>
+            <mat-form-field>
+                <mat-label>Descrizione</mat-label>
+                <input matInput formControlName="descrizione" placeholder="Descrizione">
+            </mat-form-field>
+            <br>
+            <mat-form-field>
+                <mat-label>Note</mat-label>
+                <input matInput formControlName="note" placeholder="Note">
+            </mat-form-field>
+            <br>
+            <button mat-raised-button color="primary" (click)="inserisciRiga()">inserisci dati</button>
+        </form>
     </div>
-   
-   
-    
-    
-    
-  </div>
+</div>
   
-  <ag-grid-angular
-     style="width: 100%; height: 100%"
-     class="ag-theme-alpine"
-     [getRowId]="getRowId"
-     [columnDefs]="columnDefs"
-     [defaultColDef]="defaultColDef"
-     [rowData]="rowData$ | async"
-     [rowSelection]="'multiple'"
-     (gridReady)="onGridReady($event)"
-     (cellClicked)="onCellClicked($event)"
-     (cellEditingStarted)="onCellEditingStarted($event)"
-     (cellValueChanged)="onCellValueChanged($event)"
-   ></ag-grid-angular>
+<ag-grid-angular
+    class="ag-theme-alpine"
+    [getRowId]="getRowId"
+    [columnDefs]="columnDefs"
+    [defaultColDef]="defaultColDef"
+    [rowData]="rowData$ | async"
+    [rowSelection]="'multiple'"
+    (gridReady)="onGridReady($event)"
+    (cellClicked)="onCellClicked($event)"
+    (cellEditingStarted)="onCellEditingStarted($event)"
+    (cellValueChanged)="onCellValueChanged($event)"
+    domLayout='autoHeight'
+></ag-grid-angular>
   
