modifica grafica a rendicontazione

--- a/client/src/app/rendicontazione/rendicontazione.component.html
+++ b/client/src/app/rendicontazione/rendicontazione.component.html
@@ -1,5 +1,8 @@
-
-<div style=" display: flex; height: 100%;">
+<button mat-button (click)="showForm=!showForm">
+	<span *ngIf="showForm">Nascondi form</span>
+	<span *ngIf="!showForm">Mostra form</span>
+</button>
+<div style="display: flex; margin-bottom: 12px;" *ngIf="showForm">
     <div style="flex: 1;padding: 1em;border: solid;">
      <form [formGroup] = "form">
     
