--- a/client/src/app/risorse/risorse.component.html
+++ b/client/src/app/risorse/risorse.component.html
@@ -15,7 +15,7 @@
         <input matInput formControlName="cognome" placeholder="Cognome">
       </mat-form-field><br>
       <mat-form-field>
-        <mat-label>Emaill</mat-label>
+        <mat-label>Email</mat-label>
         <input matInput formControlName="email" placeholder="Email">
       </mat-form-field><br>
       <button mat-raised-button color="primary" [disabled]= "!disabilitato" (click)="inserisciRiga()">inserisci dati</button>
